feat: add version catalog and startup branding
Co-Authored-By: Claude <noreply@anthropic.com>